DigicielFull/force-app/main/default/objects/TIMBASURVEYS__TimbaSurveyData__c/fields/TIMBASURVEYS__CP_Template_Backup__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__CP_Template_Backup__c</fullName>
    <label>CP Template Backup</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>