DigicielFull/force-app/main/default/objects/TIMBASURVEYS__TimbaSurveyData__c/fields/TIMBASURVEYS__DateOfLastNotification__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__DateOfLastNotification__c</fullName>
    <label>DateOfLastNotification</label>
    <type>DateTime</type>
</CustomField>