DigicielFull/force-app/main/default/objects/TIMBASURVEYS__TimbaSurveyData__c/fields/TIMBASURVEYS__HasSites__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__HasSites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasSites</label>
    <type>Checkbox</type>
</CustomField>