DigicielFull/force-app/main/default/objects/TIMBASURVEYS__TimbaSurveyData__c/fields/TIMBASURVEYS__Installed__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installed</label>
    <type>Checkbox</type>
</CustomField>