DigicielFull/force-app/main/default/objects/TIMBASURVEYS__TimbaSurveyData__c/fields/TIMBASURVEYS__LogEnabled__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__LogEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LogEnabled</label>
    <type>Checkbox</type>
</CustomField>