DigicielFull/force-app/main/default/objects/TIMBASURVEYS__TimbaSurveyData__c/fields/TIMBASURVEYS__SendUsageNotifications__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SendUsageNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendUsageNotifications</label>
    <type>Checkbox</type>
</CustomField>