DigicielFull/force-app/main/default/objects/TIMBASURVEYS__TimbaSurveyData__c/fields/TIMBASURVEYS__SiteUrl__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SiteUrl__c</fullName>
    <label>SiteUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>