DigicielFull/force-app/main/default/objects/TIMBASURVEYS__TimbaSurveyData__c/fields/TIMBASURVEYS__SurveyInvitationsSent__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SurveyInvitationsSent__c</fullName>
    <label>SurveyInvitationsSent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>