DigicielFull/force-app/main/default/objects/TIMBASURVEYS__TimbaSurveyData__c/fields/TIMBASURVEYS__ThemeEngineVersion__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__ThemeEngineVersion__c</fullName>
    <label>ThemeEngineVersion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>